TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Add API for rehashing the daemon (or implement it the API is there but does nothing)
 * Improved socket performance (would be nice if we could be used as a "hub")

2008-09-06 MickeM
 * Improved error reporting in the eventlogchecker
 * *BREAKING CHANGE* filter=new is now the default so unless you use the new filtering you need to specify filter=old instead!
   I Recomend everyone to stop using the "old" filtering.

2008-09-04 MickeM
 * Fixed issues with new service stuff on NT4 and W2K (should work fine now)
 + Added some DebugOutput to service handling features so if you experience tropubel try using sysinternals DebugView too se logging before the agent startes.
 * Fixed a memory leak in the error formating code

2008-08-24 MickeM
 * Changed NSCA "general problem" error message to be more descriptive.
 * Fixed issue with CheckCPU not returning a valid performance unit (%) see issue #219 for details.

2008-08-16 MickeM
 * *WARNING* THIS IS VERY VERY UNSTABEL (possibly)
 * *WARNING* A lot of new untested code here so dont run in production enviornments :)
 + Added shared session so system tray can communicate with master
 + Added new system tray handlig (via TS so FUS should work with it)
 + Added new option [System] / shared_session=0 (or 1) to enable / disable the new shared memory framework (it is for now disabled by default)
   If you want to try this remember to change that option but also beware! it is dagerous and not finnished and and also there is as of now no security at all.

2008-08-09 MickeM
 + Added ChangeWindowMessageFilter so systray should maybe work on vista and beyond!

2008-07-28 MickeM
 * Improved the error handling for the check proc state.
 * Removed all (I think) asserts replacing them with exceptions (should I hope reduce crashes and instead leave some form of errors)

2008-07-25 MickeM
 + Built a garage at the summer house