@@ -2,9 +2,9 @@
 #define AUTOBUILD_H
 // change the FALSE to TRUE for autoincrement of build number
 #define INCREMENT_VERSION TRUE
-#define FILEVER        0,3,3,39
-#define PRODUCTVER     0,3,3,39
-#define STRFILEVER     _T("0.3.3.39")
-#define STRPRODUCTVER  _T("0.3.3.39")
-#define STRPRODUCTDATE  _T("2008-09-05")
+#define FILEVER        0,3,4,4
+#define PRODUCTVER     0,3,4,4
+#define STRFILEVER     _T("0.3.4.4")
+#define STRPRODUCTVER  _T("0.3.4.4")
+#define STRPRODUCTDATE  _T("2008-09-08")
 #endif // AUTOBUILD_H
